# RAG

./: app.py  main.py  pyproject.toml  requirements.txt
data/text_files/: machine_learning.txt  python_intro.txt
data/vector_store/a8493b64-164c-423d-bb86-0c2acda172f1/: index_metadata.pickle
notebook/: document.ipynb
src/: logger.py  utils.py
src/components/: EmbeddingManager.py  GroqLLM.py  RagRetriever.py  VectorStore.py  data_ingestion.py
vector_store/: chroma.sqlite3
